<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".view.activity.MainActivity">

    <TextView
        android:id="@+id/team_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-medium"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/teamNameTextColor"
        android:textSize="@dimen/teamNameTextSize"
        tools:text="@string/team_a" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/scorePaneBottomMargin"
        android:layout_marginTop="@dimen/scorePaneTopMargin">

        <TextView
            android:id="@+id/team_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/pointsTextColor"
            android:textSize="@dimen/pointsTextSize"
            tools:text="@string/zero" />

        <TextView
            android:id="@+id/team_goals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/goalsTextViewEndMargin"
            android:layout_marginLeft="@dimen/goalsTextViewStartMargin"
            android:layout_marginRight="@dimen/goalsTextViewEndMargin"
            android:layout_marginStart="@dimen/goalsTextViewStartMargin"
            android:fontFamily="sans-serif-light"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/goalsTextColor"
            android:textSize="@dimen/goalsTextSize"
            tools:text="@string/zero" />

    </LinearLayout>

    <Button
        android:id="@+id/team_add_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/scoreButtonsBottomMargin"
        android:layout_marginEnd="@dimen/scoreButtonsRightMargin"
        android:layout_marginLeft="@dimen/scoreButtonsLeftMargin"
        android:layout_marginRight="@dimen/scoreButtonsRightMargin"
        android:layout_marginStart="@dimen/scoreButtonsLeftMargin"
        android:text="@string/three_points" />

    <Button
        android:id="@+id/team_add_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/scoreButtonsBottomMargin"
        android:layout_marginEnd="@dimen/scoreButtonsRightMargin"
        android:layout_marginLeft="@dimen/scoreButtonsLeftMargin"
        android:layout_marginRight="@dimen/scoreButtonsRightMargin"
        android:layout_marginStart="@dimen/scoreButtonsLeftMargin"
        android:text="@string/one_point" />

    <Button
        android:id="@+id/team_add_goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/scoreButtonsBottomMargin"
        android:layout_marginEnd="@dimen/scoreButtonsRightMargin"
        android:layout_marginLeft="@dimen/scoreButtonsLeftMargin"
        android:layout_marginRight="@dimen/scoreButtonsRightMargin"
        android:layout_marginStart="@dimen/scoreButtonsLeftMargin"
        android:text="@string/goal" />

</LinearLayout>